# factory

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: integration.yaml
factory/: controller.py  database.py  main.py  models.py  widgets.py
factory/widgets/: inventory.py  main_window.py  robots.py  trace.py
tests/: conftest.py  test_controller.py  test_widgets.py
