[tool.poetry]
name = "factory"
version = "0.1.0"
description = "A fun game with robots… from the future!"
authors = ["Louise <louise.tillet@mailbox.org>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PySide6 = "^6.2.3"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.32"}
Faker = "^13.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.17.0"
black = "^22.1.0"
pytest-cov = "^3.0.0"
pytest-qt = "^4.0.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
factory = "factory.main:main"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
